2004-12-01  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs : Create _current clone only when required. So just set
	  null when MoveNextCore() succeeded (except for some cases that
	  _current is _nav, such as SelfIterator).

2004-11-30  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs : SlashIterator.RequireSorting is always false. Whether
	  it has to collect nodes in prior or not and whether it might return
	  nodes in inconsistent order is different matter.
	  (It still needs to store nodes when either of branches requires
	  sorting, because they might return the same node later.)

2004-11-30  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs : reduced some extraneous ComparePosition() that could
	  be written as IsSamePosition(). ParentIterator doesn't have to be
	  RequireSorting.

2004-11-30  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs : reimplemented AncestorIterator and 
	  AncestorOrSelfIterator just to collect parents and not to move to
	  siblings. In some cases like thousands of siblings, it used to be
	  so slow, while we usually don't have so deep ancestors.

2004-11-26  Atsushi Enomoto  <atsushi@ximian.com>

	* Expression.cs : warning removal. Added Optimize() which is not
	  implemented at all.
	* Tokenizer.cs : warning elimination

2004-11-24  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathEditableNavigator.cs, XPathChangeNavigator.cs,
	  IXPathEditable.cs : more removal of oldies.

2004-11-24  Atsushi Enomoto  <atsushi@ximian.com>

	* NodeChangedEventArgs.cs, NodeChangedEventHandler.cs : removed oldies.

2004-11-08  Atsushi Enomoto  <atsushi@ximian.com>

	* Tokenizer.cs : just use raw string instead of char[].
	* XPathNavigator.cs : reuse NameTable when creating XmlTextReader.

2004-11-07  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs :
	  - Made copy constructor certainly different from other constructors.
	  - Position is never computed in each derived type. All MoveNext() are
	    now MoveNextCore().